FileProcessing.java с работающей проверкой циклов